recebendo itens do service e passando pro DOM via input properties

--- a/fakeQuotes/src/app/quotes/quote-list/quote-list.component.html
+++ b/fakeQuotes/src/app/quotes/quote-list/quote-list.component.html
@@ -1,3 +1,9 @@
 <p>quote-list works!</p>
 
-{{quotes[0]?.name}}
+<div *ngIf="loading">Carregando ...</div>
+
+<div *ngFor="let quote of quotes; let i = index">
+    <app-quote [name]="quote.name" [price]="quote.value"></app-quote>
+</div>
+
+<a (click)="reloadItens()">New Itens</a>
