filtros de ordenacao

--- a/fakeQuotes/src/app/quotes/quote-list/quote-list.component.html
+++ b/fakeQuotes/src/app/quotes/quote-list/quote-list.component.html
@@ -7,3 +7,7 @@
 </div>
 
 <a (click)="reloadItens()">New Itens</a>
+
+<a (click)="orderByHighPrice()">Ordenar Pelo Maior Preço</a>
+
+<a (click)="orderByLowPrice()">Ordenar Pelo Menor Preço</a>
