--- a/fakeQuotes/src/app/quotes/quote-list/quote-list.component.html
+++ b/fakeQuotes/src/app/quotes/quote-list/quote-list.component.html
@@ -6,7 +6,7 @@
     <app-quote [name]="quote.name" [price]="quote.value"></app-quote>
 </div>
 
-<a (click)="reloadItens()">New Itens</a>
+<a (click)="reloadItens()">Regarregar</a>
 
 <a (click)="orderByHighPrice()">Ordenar Pelo Maior Preço</a>
 
