add colors on scss

--- a/fakeQuotes/src/app/app.component.html
+++ b/fakeQuotes/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <!--<app-menu></app-menu>-->
 
-<div class="holdApp">
+<div class="holdApp container">
     <router-outlet></router-outlet>
 </div>
