--- a/fakeQuotes/src/app/core/header/header.component.html
+++ b/fakeQuotes/src/app/core/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<div class="header bg-black pl-0 d-flex align-items-center">
+    <div class="container">
+        <h1>
+            <img src="assets/images/logo-toro-horizontal-negativa-azul.png" alt="">
+        </h1>
+    </div>
+</div>
