--- a/fakeQuotes/src/app/quotes/quote-list/quote-list.component.html
+++ b/fakeQuotes/src/app/quotes/quote-list/quote-list.component.html
@@ -1,22 +1,30 @@
 <div class="hold-quotes">
     
     
-    <h1>Explore o mercado</h1>
-
-    <div>
-        <span class="color color-gray-3">Ordenar:</span>
-        <a (click)="orderByHighPrice()">Ordenar Pelo Maior Preço</a>
-
-        <a (click)="orderByLowPrice()">Ordenar Pelo Menor Preço</a>
+    <div class="float-left hold-title">
+        <h1>Explore o mercado</h1>
     </div>
+
+    <div class="float-right hold-btns">
+        <span class="color color-gray-300 mr-3 order">Ordenar:</span>
+        <a class="button color-white bg-blue mr-2" (click)="orderByHighPrice()">Em Alta</a>
+        <a class="button color-gray-300 bg-gray-200" (click)="orderByLowPrice()">Em Baixa</a>
+    </div>
+
+    <div class="clearfix"></div>
 
     <div *ngIf="loading">Carregando ...</div>
 
-    <div *ngFor="let quote of quotes; let i = index">
-        <app-quote [name]="quote?.name" [price]="quote?.value"></app-quote>
+    <div class="hold-itens">
+        <div class="row">
+            <div *ngFor="let quote of quotes; let i = index" class="col-lg-4 col-md-4 col-sm-1">
+                <app-quote [name]="quote?.name" [price]="quote?.value"></app-quote>
+            </div>
+        </div>
+        
     </div>
-
-    <a (click)="reloadItens()">Regarregar</a>
-
+    <div class="clearfix d-block mt-4 text-center">
+        <a class="button color-white bg-green" (click)="reloadItens()">Regarregar</a>
+    </div>
 
 </div>
