--- a/fakeQuotes/src/app/quotes/quote/quote.component.html
+++ b/fakeQuotes/src/app/quotes/quote/quote.component.html
@@ -1,1 +1,7 @@
-{{name}} -  {{price}} 
+<div class="border border-gray-100 hold-info">
+    <img src="../../../assets/images/fakelogo.png" alt="">
+    {{name}} -  {{price}} 
+    
+</div>
+
+
