--- a/fakeQuotes/src/styles.scss
+++ b/fakeQuotes/src/styles.scss
@@ -1,3 +1,10 @@
 
 @import "assets/fonts/style.css";
 @import "assets/scss/bootstrap.scss";
+
+//globals
+
+.clearfix {
+    clear:both;
+    display: block;
+}
