--- a/fakeQuotes/src/app/quotes/quote-list/quote-list.component.scss
+++ b/fakeQuotes/src/app/quotes/quote-list/quote-list.component.scss
@@ -11,7 +11,7 @@ h1 {font-family:$font-family-h1}
     .button {
         border-radius: 100px;
         text-align:center;
-        padding:0.5rem 1rem;
+        padding:0.3rem 1rem 0.5rem 1rem;
         font-size: 0.875rem;
         cursor:pointer;
     }
