--- a/fakeQuotes/src/app/quotes/quote/quote.component.html
+++ b/fakeQuotes/src/app/quotes/quote/quote.component.html
@@ -1,7 +1,19 @@
 <div class="border border-gray-100 hold-info">
-    <img src="../../../assets/images/fakelogo.png" alt="">
-    {{name}} -  {{price}} 
-    
+    <img src="../../../assets/images/fakelogo.png" alt="" class="mb-3">
+    <div class="d-flex justify-content-between align-items-center resume color-gray-300">
+        <div>Loren Ipsum Dolor</div>
+        <div>{{name}}</div>
+    </div>
+    <div class="text-uppercase color-gray-400 resume mt-3 mb-3">
+        Preço do ativo
+    </div>
+    <div class="price">
+        <span [ngClass]="{'color-green': index !== 2 && index !== 4, 'color-red': index === 2 || index === 4}" class=" align-items-center d-flex">
+            R$ {{price}} 
+            <img *ngIf="index !== 2 && index !== 4" src="../../../assets/images/seta-verde.svg" alt="" class="ml-1">
+            <img *ngIf="index === 2 || index === 4" src="../../../assets/images/seta-vermelha.svg" alt="" class="ml-1">
+        </span>
+    </div>
 </div>
 
 
