--- a/fakeQuotes/src/app/quotes/quote/quote.component.scss
+++ b/fakeQuotes/src/app/quotes/quote/quote.component.scss
@@ -1,3 +1,17 @@
 .hold-info {
     padding:32px 40px;
+    padding-bottom: 130px;
+    margin-bottom:32px;
+    .resume {
+        font-size: 0.75rem;
+    }
+    .price {
+        font-size: 1.5rem;
+        font-weight: bold;
+        img {
+            width: 8px;
+        }
+    }
+    background: url("../../../assets/images/grafico.svg") no-repeat center bottom;
+    background-size: 100% auto;
 }
